Edited wiki page through web user interface.

--- a/wiki/IntraSell.wiki
+++ b/wiki/IntraSell.wiki
@@ -1,5 +1,5 @@
 #labels Featured
-#Hier finden Sie einige Screenshots des IntraSell Programms. 
+Hier finden Sie einige Screenshots des IntraSell Programms. 
 
 = Introduction =
 
