--- a/wiki/IntraSell.wiki
+++ b/wiki/IntraSell.wiki
@@ -1,9 +1,9 @@
 #labels Featured
-Hier finden Sie einige Screenshots des IntraSell Programms. 
+Hier finden Sie einige Screenshots des IntraSell classic Programms. 
 
 = Introduction =
 
-Welcome to the Intrasell classic wiki pages.
+Welcome to the Intrasell classic Wiki pages.
 
 
 
