Edited wiki page through web user interface.

--- a/wiki/IntraSell.wiki
+++ b/wiki/IntraSell.wiki
@@ -1,5 +1,5 @@
+#summary Hier finden Sie einige Screenshots des IntraSell classic Programms.
 #labels Featured
-Hier finden Sie einige Screenshots des IntraSell classic Programms. 
 
 = Introduction =
 
