Edited wiki page through web user interface.

--- a/wiki/Features.wiki
+++ b/wiki/Features.wiki
@@ -1,9 +1,7 @@
 #labels Featured
-Featuresliste IntraSell 3
+= Features IntraSell 3 =
 
-= Einführung =
-
-Die folgende Auflistung liefert eine Darstellung der Basisaufgaben die mit IntraSell abgedeckt sind. 
+#summary Die folgende Auflistung liefert eine Darstellung der Basisaufgaben die mit IntraSell abgedeckt sind. 
 
 
 == IntraSell 3 Featuresliste ==
