Edited wiki page through web user interface.

--- a/wiki/Screenshots_IntraSell_Classic_3.wiki
+++ b/wiki/Screenshots_IntraSell_Classic_3.wiki
@@ -1,5 +1,6 @@
 #labels Featured
 = Screenshots IntraSell 3=
+#summary Screenshots IntraSell 3 classic
 
 Hauptseite
 <img src="http://www.griton.eu/misc/intrasell/Screenshot_intrasell_3.jpg">
