--- a/wiki/AddIns.wiki
+++ b/wiki/AddIns.wiki
@@ -6,15 +6,15 @@
 = Einfürung =
 
 == Add Ins ==  
-  * IntraSell AddIn_Sparkasse_PayPal<br/>
-  * IntraSell AddIn_GLS<br/>
-  * IntraSell AddIn_EUROFIBU.mdb<br/>
-  * IntraSell AddIn_BMD.mdb<br/>
-  * IntraSell AddIn_PriceCompare.mdb<br/>
-  * IntraSell AddIn_Nachname.mdb<br/>
-  * IntraSell AddIn_Migration.mdb<br/>
-  * IntraSell AddIn_Listen.mdb<br/> 
-  * IntraSell AddIn_KeywordsManager.mdb<br/>
-  * IntraSell AddIn_Ingram.mdb<br/>
-  * IntraSell AddIn_ImportManager.mdb<br/>
-  * IntraSell AddIn_Barverkauf.mdb<br/>
+  * IntraSell AddIn_Sparkasse_PayPal <br/>
+  * IntraSell AddIn_GLS <br/>
+  * IntraSell AddIn_EUROFIBU <br/>
+  * IntraSell AddIn_BMD <br/>
+  * IntraSell AddIn_PriceCompare <br/>
+  * IntraSell AddIn_Nachnam e<br/>
+  * IntraSell AddIn_Migration <br/>
+  * IntraSell AddIn_Listen <br/> 
+  * IntraSell AddIn_KeywordsManager <br/>
+  * IntraSell AddIn_Ingram <br/>
+  * IntraSell AddIn_ImportManager <br/>
+  * IntraSell AddIn_Barverkauf <br/>
