Edited wiki page through web user interface.

--- a/wiki/AddIn_GLS.wiki
+++ b/wiki/AddIn_GLS.wiki
@@ -2,6 +2,7 @@
 
 =GLS Export & Import=
 
+==Problemlösungen==
 1. Problem beim Importieren Paketnummer bei CSV Zeilen mit Sonderzeichen '. 
 
 Lösung: die GLS Datei auf mit notepad öffnen und eine Suche nach dem ' Zeichen starten.
