Edited wiki page through web user interface.

--- a/wiki/IntaSell_Online_Skin_Replacement.wiki
+++ b/wiki/IntaSell_Online_Skin_Replacement.wiki
@@ -2,8 +2,11 @@
 
 = Introduction =
 
-Add your content here.
+Expirience with following tools:
+1. Open Office Web Designer
+2. ..... 
 
+Please list steps how you created the webdesign of a new shop. 
 
 = Details =
 
