Edited wiki page through web user interface.

--- a/wiki/IntraSell_Classic_Help.wiki
+++ b/wiki/IntraSell_Classic_Help.wiki
@@ -1,7 +1,7 @@
 #summary Einleitung für IntraSell 3
 #labels Phase-Design
 
-= INTRASELL ONLINE HELP - IN WORK = 
+= INTRASELL ONLINE HILFE = 
 
 
 == Voraussetzungen == 
