--- a/wiki/IntraSell_Classic_Help.wiki
+++ b/wiki/IntraSell_Classic_Help.wiki
@@ -44,6 +44,7 @@
     http://intrasell.googlecode.com/svn/trunk/IntraSell_WebShop
     auschecken in c:\IntraSell\IntraSell_WebShop;
   * Datei global.asa anpassen;
+  * Replikation einrichten zwischen Office und WebServer: SetupReplikation
 
 == Funkionen == 
   * Stammdatenverwaltung: Kunden, Lieferanten, Adressen, Etiketten;
