--- a/wiki/Vorgaenge.wiki
+++ b/wiki/Vorgaenge.wiki
@@ -1,4 +1,4 @@
-#summary One-sentence summary of this page.
+#summary Hilfe: Angebote, Aufträge, Rechnungen, Lieferscheine, Gutschriften.
 
 = Introduction =
 
