Edited wiki page through web user interface.

--- a/wiki/Artikelverwaltung.wiki
+++ b/wiki/Artikelverwaltung.wiki
@@ -1,6 +1,6 @@
 #summary Hilfe: Artikelverwaltung mit IntraSell.
 
-= Introduction =
+= Allgemein =
 
 Hier finden Sie Anleitungen für die Artikelverwaltung in IntraSell. 
 
