Edited wiki page through web user interface.

--- a/wiki/Artikelverwaltung.wiki
+++ b/wiki/Artikelverwaltung.wiki
@@ -4,6 +4,8 @@
 
 Hier finden Sie Anleitungen für die Artikelverwaltung in IntraSell. 
 
+Screenshot 1:
+<img src="http://www.griton.eu/misc/intrasell/Screenshot_intrasell_3_Artikel.jpg">
 
 = Artikelanlage =
 
